objects/SOA_VOC_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Dynamic_Where_Clause__c</fullName>
        <description>This will store &quot;Where Clause&quot;  which will be used in batch job for sending survey</description>
        <label>Dynamic Where Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Addresses__c</fullName>
        <description>This will store email address of operation team for sending batch job status</description>
        <label>Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>